correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -15,6 +15,7 @@
 	background-color: #E1E1E1;
 	text-align: left;
 	margin: 0px;
+	padding: 0px;
 }
 
 .timetable th{
